--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "webapp:build": "npm run clean-www && npm run webapp:build:dev",
     "webapp:build:dev": "npm run webpack -- --config webpack/webpack.dev.js --env stats=minimal",
     "webapp:build:prod": "npm run webpack -- --config webpack/webpack.prod.js --progress=profile",
-    "webapp:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --env stats=minimal",
-    "webapp:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --inline --port=9060 --progress=profile --env stats=normal",
+    "webapp:dev": "npm run webpack-dev-server -- --config webpack/webpack.dev.js --port 9060 --env stats=minimal",
+    "webapp:dev-verbose": "npm run webpack-dev-server -- --config webpack/webpack.dev.js  --port=9060 --progress=profile --env stats=normal",
     "webapp:prod": "npm run clean-www && npm run webapp:build:prod",
     "webapp:test": "npm run test",
     "webpack-dev-server": "npm run webpack -- serve",
@@ -154,8 +154,8 @@
     "wait-on": "5.3.0",
     "webdriver-manager": "12.1.8",
     "webpack": "^5.90.3",
-    "webpack-cli": "4.6.0",
-    "webpack-dev-server": "^3.11.3",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1",
     "webpack-merge": "5.7.3",
     "webpack-notifier": "1.13.0",
     "workbox-webpack-plugin": "^6.6.0"
