--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,16 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Login to Docker Hub with PAT (secure)
-        # Use a Personal Access Token (PAT) with "repo:push" permission
-        # for secure authentication. See https://docs.docker.com/en/engine/reference/commandline/login/
+      - name: Login to Docker Hub with Passowrd
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD  }}
 
       - name: Build the Docker image
-        run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/issaty:$(date +%s)
+        run: docker build . -t ${{secrets.DOCKERHUB_USERNAME}}/issaty:$(date +%Y-%m-%d)
 
       - name: Push the Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/issaty:$(date +%s)
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/issaty:$(date +%Y-%m-%d)
